@@ -5,25 +5,33 @@ z3c.noop
 z3c.noop provides traverser that simply skips a path element,
 so /foo/++noop++qux/bar is equivalent to /foo/bar.
 
-This is useful for example to generate varying URLs to work around browser
-caches[#test-setup]_.
+This is useful for example to generate varying URLs to work around
+browser caches.
 
+
+Set up
+======
+
+To show the behavior of the noop traverser we need a trversable dummy
+object and a request:
+
+
+>>> root = getRootFolder()
 >>> dummy = object()
 >>> root['foo'] = dummy
->>> traverse('/foo') == dummy
+
+>>> import zope.publisher.browser
+>>> request = zope.publisher.browser.TestRequest()
+
+Noop traverser
+==============
+
+When the noop traverser is in the URL it does nothing. Traversal leads
+to the same object:
+
+>>> import zope.traversing.api
+>>> zope.traversing.api.traverse(root, '/foo', request=request) == dummy
 True
->>> traverse('/++noop++12345/foo') == dummy
+>>> zope.traversing.api.traverse(root, '/++noop++12345/foo',
+...     request=request) == dummy
 True
-
-
-
-.. [#test-setup]
-
-    >>> import zope.traversing.api
-    >>> import zope.publisher.browser
-
-    >>> root = getRootFolder()
-    >>> request = zope.publisher.browser.TestRequest()
-
-    >>> def traverse(path):
-    ...     return zope.traversing.api.traverse(root, path, request=request)
